# jdLog

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: clang-format.cmake  cppcheck.cmake  get_git_version.cmake
src/: common.cpp  logfile.cpp  logfile.hpp  logger.cpp  logger.hpp  loghelper.cpp  loghelper.hpp  main.cpp
